kubernetes/apps/base/plex/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.wanda.bancey.xyz`)
      kind: Rule
      services:
        - name: plex-plex-media-server
          port: 32400
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: plex-tls
